<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jammbcstore.maternitydrive.SpecialDriverSettingsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/MaternityDriveToolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/MaternityDriveAppBarColor"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/MaternityDriveAppBarAppNameColor">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/optionsBackBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:background="@drawable/ic_arrow_back_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text="@string/Settings"
                android:textColor="@color/MaternityDriveAppBarAppNameColor"
                android:textSize="20sp" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/ProfileImage"
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:layout_gravity="center"
            android:src="@drawable/ic_default_user" />

        <EditText
            android:id="@+id/SpecialDriverName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/ProfileTextName"
            android:inputType="text"
            android:padding="15dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/SpecialDriverPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/ProfileTextPhone"
            android:inputType="phone"
            android:padding="15dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/SpecialDriverPlateNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/PlateNumber"
            android:inputType="phone"
            android:padding="15dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/SpecialDriverProfileConfirmBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:background="@color/colorPrimary"
            android:padding="5dp"
            android:text="@string/ProfileConfirmBtn"
            android:textColor="@color/MaternityDriveAppBarAppNameColor"
            android:textSize="20sp"

            />

        <Button
            android:id="@+id/SpecialDriverProfileBackBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:background="@color/colorPrimary"
            android:padding="5dp"
            android:text="@string/ProfileBackBtn"
            android:textColor="@color/MaternityDriveAppBarAppNameColor"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>
